# RaspberryPiPico-Termo-Alarm

./: CMakeLists.txt  README.md  buttons.c  buttons.h  lcd.c  lcd.h  logging.c  logging.h  main.c  memory.c  memory.h  signalizer.c  signalizer.h  termopar.c  termopar.h
